# gameshelf

./: README.md  buildspec.yml
gameshelf/: .dockerignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pylintrc  pyproject.toml  requirements.txt
gameshelf/context_processors/: user.py
gameshelf/gameshelf/: asgi.py  settings.py  urls.py  wsgi.py
gameshelf/shelf/: models.py  urls.py  views.py
gameshelf/shelf/migrations/: 0001_initial.py  0002_game_platform.py  0002_game_status.py  0003_game_rating.py  0004_alter_game_rating_alter_game_title.py  0005_alter_game_platform.py  0006_alter_game_rating.py  0007_game_ranking.py  0008_alter_game_options_game_release_date.py  0009_alter_game_release_date.py  0010_alter_game_platform.py  0011_alter_game_status.py  0012_alter_game_options_remove_game_ranking.py  0013_alter_game_status.py  0014_alter_game_status.py
gameshelf/shelf/static/shelf/: add_a_game.css  add_and_edit.css  games.css  index.css
gameshelf/shelf/templates/shelf/: add_a_game.html  completed.html  edit_a_game.html  edit_order.html  (+3 more)
gameshelf/shelf/views/: __init__.py  add_a_game.py  completed_games.py  currently_playing_games.py  edit_a_game.py  edit_order.py
gameshelf/static/: base.css
gameshelf/templates/: base.html
gameshelf/user_profile/: models.py  urls.py  views.py
gameshelf/user_profile/migrations/: 0001_initial.py  0002_delete_user.py  0002_remove_shelfuser_games_collection_and_more.py  0002_shelfuser_games.py  0003_alter_shelfuser_collection.py  0003_initial.py
gameshelf/user_profile/views/: auth.py
(+22 files in other folders)
