[tool.poetry]
name = "gameshelf"
version = "0.1.0"
description = "keep track of your video games"
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
